src/test/resources/frontend/fail/duplicateDefinitionCaseSensitive2.skill
Fail {
	v64 a;
}
/** duplicate definition */
fail {
	v64 a;
}
